thy/Examples/IPPartEval/linux.gda.pl/firewallp.txt
# Generated by iptables-save v1.2.7a on Mon May 12 02:11:23 2003
*filter
:INPUT ACCEPT [67:6686]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [47:4622]
-A FORWARD -p tcp -m tcp --sport 410:415 -m time --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP
-A FORWARD -p tcp -m tcp --sport 6881:6889 -m time --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP
-A FORWARD -p tcp -m tcp --sport 4661:4669 -m time --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP
-A FORWARD -p tcp -m time  --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -m string --string X-Kazaa-User -j DROP
-A FORWARD -s  192.168.1.1 -p tcp --syn -m mac --mac 00:60:08:76:35:51 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.2 -p tcp --syn -m mac --mac 00:50:BF:6A:D3:F9 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.3 -p tcp --syn -m mac --mac 00:00:B4:3F:67:1C -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.4 -p tcp --syn -m mac --mac 00:30:4F:2E:70:72  -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.5 -p tcp --syn -m mac --mac 00:30:4F:2E:70:72 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.6 -p tcp --syn -m mac --mac 00:00:E8:69:76:31 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s 192.168.1.1 -m mac --mac 00:60:08:76:35:51 -j ACCEPT
-A FORWARD -s 192.168.1.2 -m mac --mac 00:50:BF:6A:D3:F9 -j ACCEPT
-A FORWARD -s 192.168.1.3 -m mac --mac 00:00:B4:3F:67:1C -j ACCEPT
-A FORWARD -s 192.168.1.4 -m mac --mac 00:30:4F:2E:70:7E -j ACCEPT
-A FORWARD -s 192.168.1.5 -m mac --mac 00:30:4F:2E:70:7E  -j ACCEPT
-A FORWARD -s 192.168.1.6 -m mac --mac 00:00:E8:69:76:31 -j ACCEPT
-A FORWARD -d 192.168.0.0/16 -j ACCEPT
-A FORWARD -d 172.16.0.0/16 -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
COMMIT
# Completed on Mon May 12 02:11:23 2003
